# evl_logger

./: .gitignore  CMakeLists.txt  README.md
include/: .evl_logger.h.un~  .setup.h.un~
include/evl_logger/: evl_logger.h  setup.h  win_console_color.h
script/: log4cplus.props  platform.props  third_party_dir.props
src/: .CMakeLists.txt.un~  .evl_logger.cc.un~  CMakeLists.txt  evl_logger.cc  win_console_color.cc
